nginx/nginx.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: nginx
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    project: nginx
