nginx/nginx.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    service: nginx
spec:
  rules:
  - host: "anson2049.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
